# Team_Project

./: .flake8  .gitignore  FastApi Movies.postman_collection.json  Makefile  README.md  UGC.md  as_is_level2.puml  pyproject.toml  routes_notes.txt  to_be_level2.puml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
admin_panel/: Dockerfile  README.md  migrations.sh  requirements.txt  run_uwsgi.sh
admin_panel/config/: .env_example  settings.py
admin_panel/config/components/: applications.py  database.py
admin_panel/movies/: admin.py  models.py
admin_panel/movies/migrations/: 0001_initial.py  0002_rename_created_and_modified_fields.py  0003_add_file_path_field_to_film_work.py  0004_verbose_name_and_relations_changed.py
app/: .env  database_dump.sql  docker-compose.yml  env_example  nginx.conf
app/analytics-service/: .env.template  Dockerfile  README.md  docker-compose.yaml  main.py  requirements.txt
app/analytics-service/src/: main.py
app/api/: README.md  main.py  requirements.txt
app/api/configs/: config.py
app/api/v1/: api.py  models.py
app/auth-service/: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  nginx.conf  requirements.txt
app/auth-service/migrations/: env.py
app/auth-service/nginx/: nginx.conf
app/auth-service/scripts/: apply_migrations.py  create_anonymous_userrole.py  create_migration.py  create_role.py  create_rs256_keys.py  create_superuser.py  init_migrations.py  seed_data.py  seed_permissions.py  setup_database.py
app/auth-service/src/: main.py  tracing.py
app/auth-service/tests/: README.md  docker-compose.test.yml  docker-compose.yml
app/auth_service/: .env.template  README.md  docker-compose.yaml  docker-entrypoint.sh
app/auth_service/migrations/: env.py
app/auth_service/scripts/: create_migration.py  create_rs256_keys.py  seed_data.py  seed_permissions.py
app/auth_service/src/: main.py  tracing.py
app/configs/: site.conf
app/deploy/: filebeat.yml
app/django/: Dockerfile  README.md  docker-entrypoint.sh  requirements.txt  uwsgi.ini
app/django/auth_client/: backend.py  client.py  middleware.py  models.py
app/django/example/: asgi.py  logging_config.py  sentry_config.py  settings.py  urls.py  wsgi.py
app/django/middleware/: logging_middleware.py
app/django/movies/: admin.py  models.py
app/django/scripts/: docker_compose_setup.py
app/django/uwsgi/: uwsgi.ini
app/etl/: .env  Dockerfile  config.py  elasticsearch_loader.py  env_example  etl.py  logger_setup.py  main.py  models.py  postgres_extractor.py  requirements.txt  state.py
app/etl/core/: conf.py  logger.py
app/etl/etl/: database.py  etl_process.py  extract.py  index.py  load.py  state.py  transform.py
app/fastapi/: Dockerfile  README.md  env_example  main.py  requirements.txt
app/fastapi/api/: api.py
app/fastapi/auth/: dependencies.py  jwt_bearer.py
app/fastapi/core/: config.py  elasticsearch.py  logging_setup.py  sentry_config.py
app/fastapi/db/: elastic.py  redis.py
app/fastapi/endpoints/: films.py  genres.py  health.py  movies.py  persons.py
app/fastapi/middleware/: __init__.py  logging.py
app/fastapi/models/: auth.py  film.py  genre.py  models.py  movies_models.py  person.py
app/fastapi/services/: base.py  di.py  film.py  genre.py  person.py  utils.py
app/notification-service/: Dockerfile  README.md  docker-compose.yaml  env_example  nginx.conf  requirements.txt
app/payment-service/: Dockerfile  README.md  docker-compose.yml  env_example  requirements.txt
app/ugc-service/: Dockerfile  README.md  docker-compose.yaml  env_example  requirements.txt
app/ugc-service/src/: config.py  (+4 more)
app/url_shortening_service/: Dockerfile  README.md  database.py  docker-compose.yml  env.example  main.py  requirements.txt
app/websocket-notify/: requirements.txt
app/websocket_notify/: Dockerfile  README.md  docker-compose.yml  requirements.txt
database-comparison/: README.md  docker-compose.yml  requirements.txt
database-comparison/results/: performance_results_20250526_174944.json  summary_report_20250526_174944.txt
database-comparison/src/: __init__.py  benchmark.py  data_generator.py  database_clients.py  main.py  models.py  quick_test.py
docs/: as_is_level2.puml  to_be_level2.puml
etl/: README.md
etl/postgres_to_es/: .env_example  Dockerfile  _create_index.sh  backoff.py  db_loader.py  errors.py  es_request.py  etl_func.py  index.py  main.py  producer.py.bak  queries.py  requirements.txt  send_to_es.py  settings.py  state.py  structs.py  transform.py  utils.py
infra_theatre/: .env_example  docker-compose.yml
infra_theatre/nginx/: nginx.conf
infra_theatre/swagger/: openapi.yaml
mongodb-benchmark/: docker-compose.yml
mongodb-benchmark/src/: logger.py  requirements.txt  stress_tester.py
mongodb_benchmark/: README.md
mongodb_benchmark/results/: results_mongo_20250621_212157.json  results_postgres_20250621_211643.json
mongodb_benchmark/src/: config.py  logger.py  main.py  stress_tester.py
tasks/: 00_create_repo.md
tests/: README.md
tests/auth-service/: README.md
tests/fastapi/: README.md
tests/functional/: conftest.py  docker-compose.yml  requirements.txt  settings.py
(+322 files in other folders)
