[project]
name = "Async_API_sprint_1"
version = "0.1.0"
description = "Async API sprint-1"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "django==5.1.4",
    "psycopg[binary]==3.2.3",
    "Faker==25.0.1",
    "python-dotenv==1.0.1",
    "django-cors-headers==4.6.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "elasticsearch==8.6.2",
    "pydantic_settings==2.7.1",
    "aiohttp==3.11.11",
    "redis==5.2.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "black>=24.10.0", "isort>=5.13.2"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    "notebooks",
    "__pycache__",
    ".egg-info",
]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
]
ignore = []


[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["S101"]


[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.coverage.paths]
source = ["src"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
