[project]
name = "Async_API_sprint_1"
version = "0.1.0"
description = "Async API sprint-1"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "django==5.1.4",
    "psycopg[binary]==3.2.3",
    "Faker==25.0.1",
    "python-dotenv==1.0.1",
    "django-cors-headers==4.6.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "elasticsearch==8.6.2",
    "pydantic_settings==2.7.1",
    "aiohttp==3.11.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    "notebooks",
    "__pycache__",
    ".egg-info",
    "tests/*",
    "*test*",
    "benchmark*",
]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
]
ignore = []


[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["S101"]


[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2


[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'


[tool.coverage.paths]
source = ["src"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
select = "WPS"
max-line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    "notebooks",
    "__pycache__",
    ".egg-info",
    "tests/*",
    "*test*",
    "benchmark*",
]

format = "html"
htmldir = "flake8-report"

[tool.mypy]
python_version = "3.10"

ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_globals = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
strict_optional = false
no_implicit_optional = false

plugins = []
disable_error_code = ["attr-defined"]
# Исключения
exclude = [
    "database-comparison/",
    "tests/",
    "app/etl/elasticsearch_loader.py",
    "app/etl/postgres_extractor.py",
    "app/etl/main.py",
    "app/auth_service/scripts/",
    "app/django/movies/migrations/",
    "app/auth_service/src/core/container",
    "app/analytics-service/src/etl/container",
    "app/analytics-service/src/core/container",
    "app/auth_service/src/core/config",
    "app/analytics-service/src/models/metrics"
]
